--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=374
-dock_hsplit_3=-270
+dock_hsplit_2=342
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://README.md")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://GodotSteam-da7053f258af08d81f010f69c80c54c220d03f02/addons/", "res://GodotSteam-da7053f258af08d81f010f69c80c54c220d03f02/addons/godotsteam/", "res://addons/", "res://addons/orbit_camera/", "res://addons/deformablemesh/")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/deformablemesh/plugin.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://GodotSteam-da7053f258af08d81f010f69c80c54c220d03f02/addons/", "res://GodotSteam-da7053f258af08d81f010f69c80c54c220d03f02/addons/godotsteam/", "res://addons/", "res://addons/deformablemesh/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,16 +31,16 @@ open_scenes=PackedStringArray("res://mainmenu.tscn", "res://mods.tscn", "res://g
 current_scene="res://game.tscn"
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://back.gd", "res://basegame.gd", "res://camerarotate.gd", "res://DirectionalLight3D.gd", "res://addons/deformablemesh/dm_deformable_mesh.gd", "res://addons/deformablemesh/dm_spherical_deformer.gd", "res://addons/discord-sdk-gd/example.gd", "res://game.gd", "res://gamemenu.gd", "res://graphics.gd", "res://load.gd", "res://meshgentest.gd", "res://modcard.gd", "res://modelins.gd", "res://modmanager.gd", "res://mods.gd", "res://new.gd", "res://newgame.gd", "res://addons/orbit_camera/orbit_camera.gd", "res://README.md", "res://reload.gd", "res://savabledef.gd", "res://save_file.gd", "res://setting.gd", "res://settings.gd", "res://GodotSteam-da7053f258af08d81f010f69c80c54c220d03f02/steam_appid.txt", "res://WorldEnvironment.gd"]
-open_help=["@GlobalScope", "Control", "Engine", "FileDialog", "GeometryInstance3D", "MeshInstance3D", "Node", "Object", "PCKPacker", "ProjectSettings", "SceneTree", "Viewport", "Window"]
-script_split_offset=70
+open_scripts=["res://back.gd", "res://basegame.gd", "res://camerarotate.gd", "res://DirectionalLight3D.gd", "res://addons/deformablemesh/dm_deformable_mesh.gd", "res://addons/deformablemesh/dm_spherical_deformer.gd", "res://addons/discord-sdk-gd/example.gd", "res://game.gd", "res://gamemenu.gd", "res://graphics.gd", "res://load.gd", "res://meshgentest - Copy.gd", "res://meshgentest.gd", "res://modcard.gd", "res://modelins.gd", "res://modlist.gd", "res://modmanager.gd", "res://mods.gd", "res://new.gd", "res://newgame.gd", "res://addons/orbit_camera/orbit_camera.gd", "res://addons/orbit_camera/plugin.gd", "res://addons/deformablemesh/plugin.gd", "res://README.md", "res://reload.gd", "res://savabledef.gd", "res://save_file.gd", "res://setting.gd", "res://settings.gd", "res://GodotSteam-da7053f258af08d81f010f69c80c54c220d03f02/steam_appid.txt", "res://WorldEnvironment.gd"]
+open_help=["@GlobalScope", "Control", "Engine", "FileDialog", "GeometryInstance3D", "GLTFNode", "MeshInstance3D", "Node", "Object", "PCKPacker", "ProjectSettings", "RefCounted", "Resource", "SceneTree", "Viewport", "Window"]
+script_split_offset=162
 list_split_offset=0
-selected_script="res://README.md"
+selected_script="res://camerarotate.gd"
 
 [ShaderEditor]
 
